# grit

./: .PLAN.md.swp  .gitignore  AGENT.md  AGENTS.md  AUTH_TASKS.md  Cargo.toml  DASHBOARD.md  LICENSE  MERGE_PROMPT.md  PLAN.md  README.md  TESTING.md  WAVE5-PLAN.md  err.txt  expected-all  expected-default  expected-default0  expected-verbose  expected-verbose0  libify-plan.md  merge-loop.sh  plan-regit.md  plan.md  progress.md  selected-tests.txt  status.md  stdin  stdin0  t1-plan.md  test-results.md  tmp_sum_csv.py  wasm-plan.md
bench/: report.py  run.sh
data/: command-status.tsv  file-results.tsv  git-test-cases.tsv  test-files.csv  test-results.tsv  usage-events-2026-04-08.csv
docs/: bench.html  cursor-usage.html  generate.py  index.html  manpage-parity.md  perf-analysis.md  progress.html  testfiles.html  timeline.html
git-cloud/: Cargo.toml
git-cloud/src/: ansi.rs  cursor.rs  db.rs  git_ops.rs  harness.rs  main.rs  orchestrator.rs
github-cors-proxy/: README.md  package-lock.json  package.json  tsconfig.json  vercel.json
grit/: Cargo.toml  README.md  build.rs  upstream_help_synopsis.rs
grit-lib/: Cargo.toml  README.md
grit-lib/examples/: README.md  cherry_pick.rs  commit_tree.rs  ex-grit-push.rs  ignore_match.rs  index_add.rs  merge_base.rs  odb_blob.rs  pack_index.rs  repo_init_and_open.rs  rev_list.rs  rev_parse.rs  walk_tree.rs
grit-lib/src/: attributes.rs  bloom.rs  branch_ref_format.rs  branch_tracking.rs  check_ref_format.rs  combined_diff_patch.rs  combined_tree_diff.rs  commit.rs  commit_encoding.rs  commit_graph_file.rs  commit_graph_write.rs  commit_pretty.rs  commit_trailers.rs  config.rs  connectivity.rs  crlf.rs  delta_encode.rs  diff.rs  diff_indent_heuristic.rs  diffstat.rs  dotfile.rs  error.rs  ewah_bitmap.rs  fast_export.rs  fast_import.rs  fetch_head.rs  fetch_negotiator.rs  fetch_submodules.rs  filter_process.rs  fmt_merge_msg.rs  fsck_standalone.rs  git_binary_base85.rs  git_column.rs  git_path.rs  gitmodules.rs  hide_refs.rs  hooks.rs  http_push.rs  ident.rs  ident_config.rs  (+77 more)
grit-lib/src/git_date/: approx.rs  mod.rs  parse.rs  show.rs  tm.rs
grit-lib/src/parse_options_test_tool/: flags_cmd.rs  git_number.rs  mod.rs  parse_options_cmd.rs  parse_options_help.txt  sub_cmd.rs
grit-wasm/: Cargo.toml
grit-wasm/examples/github-log/: README.md  index.html
grit-wasm/src/: bindings.rs  browser_http.rs  lib.rs  persistence.rs  remote.rs
grit-wasm/tests/: browser_network.rs
grit/src/: alias.rs  branch_ref_format.rs  branch_tracking.rs  bundle_uri.rs  bundle_uri_test_tool.rs  dotfile.rs  editor.rs  explicit_exit.rs  ext_transport.rs  fetch_submodule_recurse.rs  fetch_transport.rs  file_upload_pack_v2.rs  git_binary_base85.rs  git_column.rs  git_commit_encoding.rs  git_daemon_url.rs  git_path.rs  grit_exe.rs  http_bundle_uri.rs  http_client.rs  http_push_smart.rs  http_smart.rs  ident.rs  main.rs  pack_objects_upload.rs  pathspec.rs  pkt_line.rs  protocol.rs  protocol_wire.rs  receive_ingest.rs  ssh_transport.rs  test_tool_example_tap_output.txt  test_tool_pack_deltas.rs  test_tool_run_command.rs  trace_packet.rs  transport_passthrough.rs  transport_path.rs  url_rewrite.rs
grit/src/commands/: _submodule_run_update_inner.rs.inc  add.rs  add_patch.rs  am.rs  annotate.rs  apply.rs  archive.rs  backfill.rs  bisect.rs  blame.rs  branch.rs  bugreport.rs  bundle.rs  cat_file.rs  check_attr.rs  check_ignore.rs  check_mailmap.rs  check_ref_format.rs  checkout.rs  checkout_index.rs  cherry.rs  cherry_pick.rs  clean.rs  clone.rs  column.rs  commit.rs  commit_graph.rs  commit_tree.rs  config.rs  config_vars_all.txt  count_objects.rs  credential.rs  credential_cache.rs  credential_store.rs  daemon.rs  describe.rs  diagnose.rs  diff.rs  diff_files.rs  diff_index.rs  (+117 more)
grit/src/commands/help/assets/: all_commands_help.txt
gust/: Cargo.toml
gust-lib/: Cargo.toml
gust-lib/src/: config.rs  error.rs  ignore.rs  lib.rs  merge_base.rs  objects.rs  odb.rs  pack.rs  refs.rs  repo.rs  rev_parse.rs
gust/src/: main.rs
gust/src/commands/: add.rs  branch.rs  cat_file.rs  check_ignore.rs  checkout_index.rs  commit.rs  commit_tree.rs  config.rs  count_objects.rs  diff_index.rs  for_each_ref.rs  gc.rs  hash_object.rs  init.rs  log.rs  ls_files.rs  ls_tree.rs  merge_base.rs  mod.rs  read_tree.rs  repack.rs  rev_list.rs  rev_parse.rs  show_ref.rs  status.rs  symbolic_ref.rs  tag.rs  update_index.rs  update_ref.rs  verify_pack.rs  write_tree.rs
logs/: 2026-03-31_1210-phase-5.1-write-tree-index-modes.md  2026-03-31_1656-phase-0.1-cargo-workspace.md  2026-03-31_16:30-phase0-workspace.md  2026-03-31_1701-phase-0.2-cli.md  2026-03-31_1704-phase-0.3-repo-discovery.md  2026-03-31_1707-phase-0.4-oid.md  2026-03-31_1710-phase-0.5-loose-odb.md  2026-03-31_1714-phase-0.6-test-harness.md  2026-03-31_1718-phase-1.1-init-layout.md  2026-03-31_1718-phase-10.1-loose-refs.md  2026-03-31_1725-phase-2.1-hash-object.md  2026-03-31_1733-phase-2.3-hash-object-literally-stdin.md  2026-03-31_1735-phase-1.2-init-flags.md  2026-03-31_1738-phase-3.1-cat-file-modes.md  2026-03-31_1743-phase-10.2-update-ref-oldvalue-noderef.md  2026-03-31_1743-phase-3.2-cat-file-batch-modes.md  2026-03-31_1745-phase-2.4-hash-object-test-port.md  2026-03-31_1804-phase-9.1-commit-tree-object.md  2026-03-31_1812-phase-10.5-update-ref-test-port.md  2026-03-31_1815-phase-1.3-init-paths.md  2026-03-31_1815-phase-4.1-index-format.md  2026-03-31_1819-phase-4.2-update-index.md  2026-03-31_1820-phase-6.2-ls-tree-pathspec-glob.md  2026-03-31_1830-phase-4.3-ls-files.md  2026-03-31_1844-phase-7.1-read-tree-single-tree.md  2026-03-31_1850-phase-5.1-write-tree-index-to-tree.md  2026-03-31_1909-phase-8.1-checkout-index-mkdir.md  2026-03-31_1922-phase-8.2-checkout-index-flags.md  2026-03-31_1935-phase-8.3-checkout-index-temp-tmpdir.md  2026-03-31_1937-phase-5.4-write-tree-test-port.md  2026-03-31_1943-phase-9.2-commit-tree-gpg-sign.md  2026-03-31_1946-phase-8.4-checkout-index-symlink-behavior.md  2026-03-31_1951-phase-9.3-commit-tree-write-odb.md  2026-03-31_1957-plan-reconcile-gap.md  (+861 more)
plans/: fetch-plan.md  push-plan.md  (+5 more)
(+1746 files in other folders)
