[workspace]
members = ["grit", "grit-lib"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/schacon/grit"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
sha1 = "0.10"
flate2 = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
hex = "0.4"
tempfile = "3"
similar = "2"
regex = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
