[workspace]
members = ["grit", "grit-lib", "git-cloud"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
repository = "https://github.com/schacon/grit"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
sha1 = "0.10"
flate2 = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
hex = "0.4"
tempfile = "3"
similar = "2"
merge3 = "0.2"
regex = "1"
unicode-width = "0.2"
libc = "0.2"
hungarian = "1.1.1"
ureq = "2.12"
url = "2.5"
icu_normalizer = "2.0.0"
shell-words = "1.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
