[package]
name = "grit-lib"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Core library for the grit Git implementation"
readme = "README.md"
repository = "https://github.com/schacon/grit"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
sha1.workspace = true
flate2.workspace = true
time.workspace = true
hex.workspace = true
tempfile.workspace = true
similar.workspace = true
regex.workspace = true
libc.workspace = true
