[package]
name = "grit-lib"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Core library for the grit Git implementation"
readme = "README.md"
repository = "https://github.com/schacon/grit"

# Do not use `lints.workspace = true`: we allow `unsafe_code` here for `git_date` (`libc` like Git `date.c`).
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
thiserror.workspace = true
sha1.workspace = true
flate2.workspace = true
time.workspace = true
hex.workspace = true
tempfile.workspace = true
similar.workspace = true
regex.workspace = true
libc.workspace = true
