[package]
name = "grit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gust: a Git plumbing reimplementation in Rust"

[[bin]]
name = "grit"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
grit-lib = { path = "../grit-lib" }
anyhow.workspace = true
clap.workspace = true
time.workspace = true
tempfile.workspace = true
regex.workspace = true
similar.workspace = true
sha1.workspace = true
hex.workspace = true
flate2.workspace = true
