[package]
name = "grit-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A Git implementation in Rust"
repository = "https://github.com/schacon/grit"

[[bin]]
name = "grit"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
grit-lib = { path = "../grit-lib" }
anyhow.workspace = true
clap.workspace = true
time.workspace = true
tempfile.workspace = true
regex.workspace = true
similar.workspace = true
sha1.workspace = true
hex.workspace = true
flate2.workspace = true
