[package]
name = "grit-rs"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "A Git implementation in Rust"
readme = "README.md"
repository = "https://github.com/schacon/grit"

[[bin]]
name = "grit"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
grit-lib = { version = "0.1.0", path = "../grit-lib" }
anyhow.workspace = true
clap.workspace = true
time.workspace = true
tempfile.workspace = true
regex.workspace = true
similar.workspace = true
sha1.workspace = true
hex.workspace = true
flate2.workspace = true
unicode-width.workspace = true
