[package]
name = "gust-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for the Gust Git reimplementation"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
sha1.workspace = true
flate2.workspace = true
time.workspace = true
hex.workspace = true
tempfile.workspace = true
similar.workspace = true
